--- a/base/templates/base/old/profile.html
+++ b/base/templates/base/old/profile.html
@@ -78,7 +78,7 @@
             </form>
         </div>
     </div>
-    <script src="../Scripts/account_expand.js"></script>
+    <script src="{% static 'js/account_expand.js' %}"></script>
 </body>
 
 </html>
