--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -275,7 +275,7 @@ select {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     margin: 1rem 0;
-    height: 35rem;
+    // height: 35rem;
     gap: 1rem;
 }
 
