--- a/base/templates/base/board_form.html
+++ b/base/templates/base/board_form.html
@@ -57,10 +57,12 @@
     <div id="border_settings"></div>
     <div class="edit_board_button_selection">
         <div class="main_button" style="visibility: hidden"></div>
-        <div class="main_button" id="edit_board_delete">delete</div>
+        
+        <div class="main_button" id="edit_board_delete" onclick="location.pathname = 'delete_board/{{board.id}}'">delete</div>
+        
     </div>
     <div class="edit_board_button_selection">
-        <div class="main_button" id="edit_board_cancel">cancel</div>
+        <div class="main_button" id="edit_board_cancel" onclick="location.pathname = 'board/{{board.id}}'">cancel</div>
         <button class="main_button" type="submit" id="edit_board_save">submit</button>
     </div>
 </form>
