--- a/base/templates/base/delete_item.html
+++ b/base/templates/base/delete_item.html
@@ -15,18 +15,23 @@
     <link rel='stylesheet'
         href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
     <link rel="stylesheet" href="{% static 'styles/app.css' %}">
-    <title>{{board.name}}</title>
+    <title>Delete</title>
 </head>
 
 <body>
 
     <form method="POST" action="" class="edit_card">
         {% csrf_token %}
-    
-        <h3>Are you sure you want to delete this item?</h3>
         
+        {% if page == 'delete-board' %}
+        <h3>Are you sure you want to delete the board with the title {{board.name}}?</h3>
+        {% endif %}
+
+        {% if page == 'delete-card' %}
+        <h3>Are you sure you want to delete the card with the title {{task.name}}?</h3>
+        {% endif %}
         <div class="main_button"  id="edit_card_delete">Cancel</div>
-        <div class="main_button" id="edit_card_cancel">Yes</div>
+        <button class="main_button" type="submit" id="edit_card_cancel">Yes</button>
     </form>
 
 </body>
