--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -59,10 +59,12 @@
             <div class="board_overview" id="my_boards">
                 <h1>My Boards</h1>
                 <div class="search_container">
-                    <input type="text" class="searchbar" placeholder="Search for Boards" />
-                    <div class="search_btn">
-                        <img src="{% static 'Images/Icons/suche.svg' %}" alt="search">
-                    </div>
+                    <form>
+                        <input type="text" name="q" class="searchbar" placeholder="Search for Boards"/>
+                        <button type="sutbmit" class="search_btn">
+                            <img src="{% static 'Images/Icons/suche.svg' %}" alt="search">
+                        </button>
+                    </form>
                 </div>
                 <div class="board_preview_expand_container">
                     <div class="board_preview_expand_line"></div>
@@ -80,9 +82,23 @@
                     <!-- insert 4 board previews here after click on board_preview_expand_container (see below) -->
                     <div class="public_boards_anchor"></div>
                 </div>
+            </div>
+            {% else %}
+            <div class="board_overview" id="my_boards">
+                <h1>Log in to add your own boards!</h1>
+                <div class="search_container">
+                    <form>
+                        <input type="text" name="q" class="searchbar" placeholder="Search for Boards"/>
+                        <button type="sutbmit" class="search_btn">
+                            <img src="{% static 'Images/Icons/suche.svg' %}" alt="search">
+                        </button>
+                    </form>
+                </div>
                 <div class="board_preview_expand_container">
                     <div class="board_preview_expand_line"></div>
-                    <div class="board_preview_expand">show more boards</div>
+                    <!-- <div class="board_preview_expand">show more boards</div> -->
+                    <div class="board_preview_expand" style="margin-top: 1.5rem;"
+                        onclick="location.pathname = './login'">Log in</div>
                     <div class="board_preview_expand_line"></div>
                 </div>
             </div>
@@ -91,13 +107,13 @@
         <!-- End If for MyBoards when loged in -->
         <div id="back_color_public_boards">
             <div class="board_overview" id="public_boards">
-                <h1>Public Boards</h1>
-                <div class="search_container">
+                <h1>All Boards</h1>
+                <!-- <div class="search_container">
                     <input type="text" class="searchbar" placeholder="Search for Boards" />
                     <div class="search_btn">
                         <img src="{% static 'Images/Icons/suche.svg' %}" alt="search">
                     </div>
-                </div>
+                </div> -->
                 <div class="board_previews">
                     {% for board in boards %}
                     {% include 'base/board_item.html' %}
@@ -105,15 +121,11 @@
                     <!-- insert 4 board previews here after click on board_preview_expand_container (see below) -->
                     <div class="public_boards_anchor"></div>
                 </div>
-                <div class="board_preview_expand_container">
-                    <div class="board_preview_expand_line"></div>
-                    <div class="board_preview_expand">show more boards</div>
-                    <div class="board_preview_expand_line"></div>
-                </div>
             </div>
         </div>
     </div>
     <script src="{% static 'js/account_expand.js' %}"></script>
+    <script src="{% static 'js/homepage.js' %}"></script>
 
 </body>
 
